Use normal bot to look after chat and userbot only to ban

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 
 # Database and session file paths
 DB_PATH=/data/staring_misaka.db
-SESSION_PATH=/secret/staring_misaka.session
+USERBOT_SESSION_PATH=/secret/staring_misaka.session
+BOT_SESSION_PATH=/secret/staring_misaka_bot.session
+BOT_TOKEN=bot_token
